<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">济南公交</string>
    <string name="action_settings">设置</string>
    <string name="test_button">测试</string>
    <string name="bus_line_hint">请输入查询的线路</string>
    <string name="query_busline">查询线路</string>
    <string name="detail_text_view_hint">查询结果</string>
    <string name="busline_query">线路查询</string>
    <string name="query_failed">查询失败，请保持网络畅通。</string>
    <string name="bus_line_not_exist">查询的公交线路不存在。</string>
    <string name="title_activity_busline_deatil">路线详情</string>


    <string name="title_section1">路线详情</string>
    <string name="title_section2">车辆详情</string>
    <string name="title_section3">车辆分布</string>

    <string name="please_wait">请稍等…</string>
    <string name="working">正在查询</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="UnusedResources">Hello blank fragment</string>

</resources>
